core/api/mblink.h

// ========== 类型定义 ==========

typedef struct MBlinkWindow* MBlinkHandle;
typedef enum {
    MBLINK_LIFECYCLE_CREATED = 0,
    MBLINK_LIFECYCLE_LOADED = 1,
    MBLINK_LIFECYCLE_RUNNING = 2,
    MBLINK_LIFECYCLE_CLOSE_REQUESTED = 3,
    MBLINK_LIFECYCLE_STOPPED = 4,
    MBLINK_LIFECYCLE_DESTROYED = 5
} MBlinkLifecycleState;
typedef enum {
    MBLINK_OBSERVE_CONSOLE = 1,
    MBLINK_OBSERVE_ERROR = 2
} MBlinkObserveKind;
// ========== 窗口配置 ==========

typedef struct {
    const char* title;
    int width;
    int height;
    bool headless;
    bool borderless;
    bool transparent;
    bool always_on_top;
    bool resizable;
    bool gpu;
    bool fullscreen;
    int resize_border_width;
    int min_width, min_height;
    int max_width, max_height;
} MBlinkConfig;
typedef struct {
    const char* runtime_epoch;
    bool load_embedded_runtime;
    bool load_official_preact;
} MBlinkRuntimeOptions;
// ========== 回调类型 ==========

// 函数绑定回调: JS 调用 backend.xxx() 时触发，返回 JSON 字符串。
// 返回值必须由 MBlink 运行时通过 mblink_free() 释放。
// 建议绑定层使用 mblink_copy_string() 分配返回字符串，确保分配/释放在同一运行时。
typedef char* (*MBlinkCallback)(const char* args_json, void* user_data);
typedef char* (*MBlinkAsyncCallback)(const char* args_json, void* user_data);
// 状态变更回调
typedef void (*MBlinkStateCallback)(const char* name, const char* value_json,
                                     void* user_data);
// 事件回调
typedef void (*MBlinkResizeCallback)(int width, int height, void* user_data);
typedef void (*MBlinkVoidCallback)(void* user_data);
typedef bool (*MBlinkBoolCallback)(void* user_data);
typedef void (*MBlinkUpdateCallback)(float delta_time, void* user_data);
typedef void (*MBlinkObserveCallback)(MBlinkObserveKind kind,
                                     const char* entry_json,
                                     void* user_data);
// ========== 生命周期 ==========

MBLINK_API int mblink_init(void);
MBLINK_API void mblink_cleanup(void);
MBLINK_API const char* mblink_version(void);
// ========== 窗口管理 ==========

/** 创建窗口（简单版，使用默认配置） */
MBLINK_API MBlinkHandle mblink_create(const char* title, int width,
                                         int height);
/** 创建窗口（完整版，使用 MBlinkConfig） */
MBLINK_API MBlinkHandle mblink_create_ex(const MBlinkConfig* config);
/** 获取默认配置（可修改后传给 mblink_create_ex） */
MBLINK_API MBlinkConfig mblink_default_config(void);
MBLINK_API void mblink_destroy(MBlinkHandle handle);
/** 阻塞运行事件循环，直到窗口关闭或调用 mblink_stop() */
MBLINK_API void mblink_run(MBlinkHandle handle);
MBLINK_API void mblink_stop(MBlinkHandle handle);
/** 单次事件循环迭代（高级用法） */
MBLINK_API bool mblink_poll_events(MBlinkHandle handle);
MBLINK_API bool mblink_wait_events(MBlinkHandle handle);
MBLINK_API MBlinkRuntimeOptions mblink_default_runtime_options(void);
MBLINK_API int mblink_configure_runtime(MBlinkHandle handle,
                                      const MBlinkRuntimeOptions* options);
MBLINK_API int mblink_load_embedded_runtime(MBlinkHandle handle,
                                          bool include_official_preact);
MBLINK_API int mblink_load_entry_file(MBlinkHandle handle, const char* entry_path,
                                    bool execute_html_scripts);
MBLINK_API int mblink_load_module_file(MBlinkHandle handle,
                                     const char* entry_path);
MBLINK_API int mblink_render_frame(MBlinkHandle handle, int passes);
MBLINK_API int mblink_runtime_epoch(MBlinkHandle handle, char** out_epoch);
MBLINK_API MBlinkLifecycleState mblink_lifecycle_state(MBlinkHandle handle);
MBLINK_API int mblink_lifecycle_reason(MBlinkHandle handle, char** out_reason);
// ========== 函数绑定 ==========

/** 绑定宿主函数，JS 中通过 backend.name(args) 调用 */
MBLINK_API int mblink_bind(MBlinkHandle handle, const char* name,
                             MBlinkCallback callback, void* user_data);
/** 绑定异步宿主函数，JS 中通过 await backend.name(args) 调用 */
MBLINK_API int mblink_bind_async(MBlinkHandle handle, const char* name,
                               MBlinkAsyncCallback callback, void* user_data);
MBLINK_API void mblink_unbind(MBlinkHandle handle, const char* name);
// ========== 工具函数 ==========

// 拷贝字符串到 MBlink 运行时分配的内存；调用者需通过 mblink_free() 释放
MBLINK_API char* mblink_copy_string(const char* str);
MBLINK_API const char* mblink_last_error(void);