bindings/python/mblink/_ffi.py

"""
MBlink C API ctypes 绑定层
自动加载 mblink.dll / libmblink.so，声明所有 C 函数签名
"""

import ctypes
import ctypes.util
import os
import sys
import platform

# ========== 类型别名 ==========
c_int = ctypes.c_int
c_int64 = ctypes.c_int64
c_double = ctypes.c_double
c_bool = ctypes.c_bool
c_char_p = ctypes.c_char_p
c_void_p = ctypes.c_void_p
c_float = ctypes.c_float
c_size_t = ctypes.c_size_t
c_uint32 = ctypes.c_uint32
c_ushort = ctypes.c_ushort
POINTER = ctypes.POINTER

# ========== 回调类型 ==========
# char* (*MBlinkCallback)(const char* args_json, void* user_data)
# 注意：回调返回值必须来自 mblink_copy_string()，由 MBlink 在 C 侧释放
MBlinkCallback = ctypes.CFUNCTYPE(c_void_p, c_char_p, c_void_p)
MBlinkAsyncCallback = ctypes.CFUNCTYPE(c_void_p, c_char_p, c_void_p)
# void (*MBlinkStateCallback)(const char* name, const char* value_json, void* user_data)
MBlinkStateCallback = ctypes.CFUNCTYPE(None, c_char_p, c_char_p, c_void_p)
# void (*MBlinkResizeCallback)(int width, int height, void* user_data)
MBlinkResizeCallback = ctypes.CFUNCTYPE(None, c_int, c_int, c_void_p)
# void (*MBlinkVoidCallback)(void* user_data)
MBlinkVoidCallback = ctypes.CFUNCTYPE(None, c_void_p)
# bool (*MBlinkBoolCallback)(void* user_data)
MBlinkBoolCallback = ctypes.CFUNCTYPE(c_bool, c_void_p)
# void (*MBlinkUpdateCallback)(float delta_time, void* user_data)
MBlinkUpdateCallback = ctypes.CFUNCTYPE(None, c_float, c_void_p)
MBlinkObserveCallback = ctypes.CFUNCTYPE(None, c_int, c_char_p, c_void_p)


# ========== MBlinkConfig 结构体 ==========
class MBlinkConfig(ctypes.Structure):
    _fields_ = [
        ("title", c_char_p),
        ("width", c_int),
        ("height", c_int),
        ("headless", c_bool),
        ("borderless", c_bool),
        ("transparent", c_bool),
        ("always_on_top", c_bool),
        ("resizable", c_bool),
        ("gpu", c_bool),
        ("fullscreen", c_bool),
        ("resize_border_width", c_int),
        ("min_width", c_int), ("min_height", c_int),
        ("max_width", c_int), ("max_height", c_int),
    ]


class MBlinkRuntimeOptions(ctypes.Structure):
    _fields_ = [
        ("runtime_epoch", c_char_p),
        ("load_embedded_runtime", c_bool),
        ("load_official_preact", c_bool),
    ]


class MBlinkUiDevSnapshotOptions(ctypes.Structure):
    _fields_ = [
        ("runtime_epoch", c_char_p),
        ("max_nodes", c_size_t),
        ("max_depth", c_int),
        ("root_selector", c_char_p),
        ("include_screenshot", c_bool),
        ("inline_screenshot", c_bool),
        ("screenshot_file", c_char_p),
    ]


class MBlinkDevToolsHttpOptions(ctypes.Structure):
    _fields_ = [
        ("bind_host", c_char_p),
        ("port", c_ushort),
        ("auth_token", c_char_p),
        ("require_auth", c_bool),
    ]


class MBlinkDevToolsHttpInfo(ctypes.Structure):
    _fields_ = [
        ("port", c_ushort),
        ("url", c_char_p),
        ("auth_token", c_char_p),
    ]


# ========== DLL 加载 ==========
def _find_dll():
    """查找 MBlink 动态库"""
    # 可能的文件名
    if platform.system() == "Windows":
        names = ["mblink.dll"]
    elif platform.system() == "Darwin":
        names = ["libmblink.dylib"]
    else:
        names = ["libmblink.so"]

    # 搜索路径
    pkg_dir = os.path.dirname(os.path.abspath(__file__))
    proj_root = os.path.normpath(os.path.join(pkg_dir, "..", "..", ".."))
    search_dirs = [
        pkg_dir,  # 当前包目录
        os.path.join(pkg_dir, "bin"),  # bin 子目录
        os.getcwd(),  # 当前工作目录
        os.path.join(proj_root, "build", "bin", "Release"),  # CMake Release 输出
        os.path.join(proj_root, "build", "bin", "Debug"),    # CMake Debug 输出
    ]

    # 从环境变量获取额外搜索路径
    env_path = os.environ.get("MBLINK_DLL_PATH", "")
    if env_path:
        search_dirs.insert(0, env_path)

    for d in search_dirs:
        for name in names:
            path = os.path.join(d, name)
            if os.path.exists(path):
                return path

    # 最后尝试系统路径
    for name in names:
        try:
            return ctypes.util.find_library(name.replace(".dll", "").replace("lib", "").replace(".so", "").replace(".dylib", ""))
        except Exception:
            pass

    return None


def load_dll(path=None):
    """加载 MBlink 动态库并绑定函数签名"""
    if path is None:
        path = _find_dll()
    if path is None:
        raise FileNotFoundError(
            "找不到 MBlink 动态库。请设置 MBLINK_DLL_PATH 环境变量，"
            "或将 mblink.dll 放在当前目录下。"
        )
    lib = ctypes.CDLL(path)
    lib._mblink_dll_path = path
    _bind_functions(lib)
    return lib


def _devtools_library_names():
    if platform.system() == "Windows":
        return ["mblink_devtools.dll"]
    if platform.system() == "Darwin":
        return ["libmblink_devtools.dylib"]
    return ["libmblink_devtools.so"]


def _find_devtools_dll(mblink_lib=None, path=None):
    if path:
        if not os.path.isabs(path):
            raise ValueError("devtools path must be absolute")
        return os.path.realpath(path)

    names = _devtools_library_names()
    candidates = []
    env_path = os.environ.get("MBLINK_DEVTOOLS_PATH", "")
    if env_path:
        if not os.path.isabs(env_path):
            raise ValueError("MBLINK_DEVTOOLS_PATH must be absolute")
        if os.path.isdir(env_path):
            candidates.extend(os.path.realpath(os.path.join(env_path, name)) for name in names)
        else:
            candidates.append(os.path.realpath(env_path))

    mblink_path = getattr(mblink_lib, "_mblink_dll_path", None)
    if mblink_path:
        base_dir = os.path.dirname(os.path.abspath(mblink_path))
        candidates.extend(os.path.join(base_dir, name) for name in names)

    pkg_dir = os.path.dirname(os.path.abspath(__file__))
    for directory in (
        os.path.join(pkg_dir, "bin"),
        pkg_dir,
    ):
        candidates.extend(os.path.abspath(os.path.join(directory, name)) for name in names)

    for candidate in candidates:
        if candidate and os.path.exists(candidate):
            return candidate

    return None


def load_devtools_dll(mblink_lib=None, path=None):
    resolved = _find_devtools_dll(mblink_lib, path)
    if resolved is None:
        raise FileNotFoundError(
            "mblink_devtools dynamic library not found. Set MBLINK_DEVTOOLS_PATH "
            "or place mblink_devtools.dll next to mblink.dll."
        )
    lib = ctypes.CDLL(resolved)
    lib._mblink_devtools_dll_path = resolved
    _bind_devtools_functions(lib)
    return lib


def _bind_devtools_functions(lib):
    H = c_void_p
    lib.mblink_devtools_open.restype = c_int
    lib.mblink_devtools_open.argtypes = [H]
    lib.mblink_devtools_close.restype = c_int
    lib.mblink_devtools_close.argtypes = [H]
    lib.mblink_devtools_default_http_options.restype = MBlinkDevToolsHttpOptions
    lib.mblink_devtools_default_http_options.argtypes = []
    lib.mblink_devtools_http_start.restype = c_int
    lib.mblink_devtools_http_start.argtypes = [H, POINTER(MBlinkDevToolsHttpOptions), POINTER(MBlinkDevToolsHttpInfo)]
    lib.mblink_devtools_http_stop.restype = c_int
    lib.mblink_devtools_http_stop.argtypes = [H]
    lib.mblink_devtools_http_info_free.restype = None
    lib.mblink_devtools_http_info_free.argtypes = [POINTER(MBlinkDevToolsHttpInfo)]
    lib.mblink_ui_dev_default_snapshot_options.restype = MBlinkUiDevSnapshotOptions
    lib.mblink_ui_dev_default_snapshot_options.argtypes = []
    lib.mblink_ui_dev_snapshot_json.restype = c_int
    lib.mblink_ui_dev_snapshot_json.argtypes = [H, POINTER(MBlinkUiDevSnapshotOptions), POINTER(c_void_p)]
    lib.mblink_ui_dev_snapshot_file.restype = c_int
    lib.mblink_ui_dev_snapshot_file.argtypes = [H, c_char_p, POINTER(MBlinkUiDevSnapshotOptions)]
    lib.mblink_ui_dev_command_json.restype = c_int
    lib.mblink_ui_dev_command_json.argtypes = [H, c_char_p, POINTER(c_void_p)]


def _bind_functions(lib):
    """声明所有 C 函数签名"""
    H = c_void_p  # MBlinkHandle

    # 生命周期
    lib.mblink_init.restype = c_int
    lib.mblink_init.argtypes = []
    lib.mblink_cleanup.restype = None
    lib.mblink_cleanup.argtypes = []
    lib.mblink_version.restype = c_char_p
    lib.mblink_version.argtypes = []
    lib.mblink_last_error.restype = c_char_p
    lib.mblink_last_error.argtypes = []

    # 窗口管理
    lib.mblink_create.restype = H
    lib.mblink_create.argtypes = [c_char_p, c_int, c_int]
    lib.mblink_create_ex.restype = H
    lib.mblink_create_ex.argtypes = [POINTER(MBlinkConfig)]
    lib.mblink_default_config.restype = MBlinkConfig
    lib.mblink_default_config.argtypes = []
    lib.mblink_destroy.restype = None
    lib.mblink_destroy.argtypes = [H]
    lib.mblink_run.restype = None
    lib.mblink_run.argtypes = [H]
    lib.mblink_stop.restype = None
    lib.mblink_stop.argtypes = [H]
    lib.mblink_poll_events.restype = c_bool
    lib.mblink_poll_events.argtypes = [H]
    lib.mblink_wait_events.restype = c_bool
    lib.mblink_wait_events.argtypes = [H]
    lib.mblink_default_runtime_options.restype = MBlinkRuntimeOptions
    lib.mblink_default_runtime_options.argtypes = []
    lib.mblink_configure_runtime.restype = c_int
    lib.mblink_configure_runtime.argtypes = [H, POINTER(MBlinkRuntimeOptions)]
    lib.mblink_load_embedded_runtime.restype = c_int
    lib.mblink_load_embedded_runtime.argtypes = [H, c_bool]
    lib.mblink_load_entry_file.restype = c_int
    lib.mblink_load_entry_file.argtypes = [H, c_char_p, c_bool]
    lib.mblink_load_module_file.restype = c_int
    lib.mblink_load_module_file.argtypes = [H, c_char_p]
    lib.mblink_render_frame.restype = c_int
    lib.mblink_render_frame.argtypes = [H, c_int]
    lib.mblink_runtime_epoch.restype = c_int
    lib.mblink_runtime_epoch.argtypes = [H, POINTER(c_void_p)]
    lib.mblink_lifecycle_state.restype = c_int
    lib.mblink_lifecycle_state.argtypes = [H]
    lib.mblink_lifecycle_reason.restype = c_int
    lib.mblink_lifecycle_reason.argtypes = [H, POINTER(c_void_p)]

    # 函数绑定
    lib.mblink_bind.restype = c_int
    lib.mblink_bind.argtypes = [H, c_char_p, MBlinkCallback, c_void_p]
    lib.mblink_bind_async.restype = c_int
    lib.mblink_bind_async.argtypes = [H, c_char_p, MBlinkAsyncCallback, c_void_p]
    lib.mblink_unbind.restype = None
    lib.mblink_unbind.argtypes = [H, c_char_p]
